K8s/deployment.yml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: continuousimprovement
    namespace: dolittle
  spec:
    template:
      metadata:
        labels:
          app: continuousimprovement
          name: continuousimprovement
      spec:
        containers:
        - name: continuousimprovement
          image: dolittle/continuousimprovement
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
          - name: azure
            mountPath: /build           
        volumes:
          - name: azure
            azureFile:
              secretName: azure-storage-secret
              shareName: continuousimprovement
              readOnly: false
