K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: continuousimprovement
    namespace: dolittle
    labels:
      app: continuousimprovement
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: continuousimprovement-port
      protocol: TCP
    selector:
      app: continuousimprovement
      name: continuousimprovement
